# imas-plugins

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: LibXml2StrPrintfConfig.cmake  StaticAnalysis.cmake  plugins.cmake  testing.cmake  use_cxx11.cmake
exp2imas/: CMakeLists.txt  exp2imas_mds.cpp  exp2imas_mds.h  exp2imas_plugin.c  (+1 more)
imas_mapping/: CMakeLists.txt  imas_mapping_plugin.cpp  imas_mapping_plugin.h  machine_mapping.h
imasdd/: CMakeLists.txt  imasdd_plugin.cpp  imasdd_plugin.h
source/: CMakeLists.txt  test_helpers.cpp  test_helpers.h
source/etc/: module.in
source/exp2imas/: CMakeLists.txt  exp2imas_mapping_files.cpp  exp2imas_mapping_files.h  exp2imas_mds.cpp  exp2imas_mds.h  exp2imas_plugin.cpp  exp2imas_plugin.h  exp2imas_ramCache.c  exp2imas_ssh_gui.c  exp2imas_ssh_server.c  exp2imas_ssh_server.h  exp2imas_xml.c  exp2imas_xml.cpp  exp2imas_xml.h  udaPlugins.conf
source/exp2imas/mappings/: IMAS_mapping_mse.xml
source/exp2imas/mappings/AUG/wall/0/: AUG_wall_v1.xml
source/exp2imas/mappings/IMAS/: core_profiles_v3.0.0.xml  equilibrium_v3.0.0.xml  equilibrium_v4.0.0.xml  magnetics_v3.0.0.xml  mse_v3.0.0.xml  pf_active_v3.0.0.xml  summary_v3.0.0.xml  tf_v3.0.0.xml  thomson_scattering_v3.0.0.xml
source/exp2imas/mappings/JET/core_profiles/0/: JET_core_profiles_v1.xml
source/exp2imas/mappings/JET/equilibrium/0/: JET_equilibrium_v1.xml
source/exp2imas/mappings/JET/equilibrium/72105/: JET_equilibrium_v1.xml
source/exp2imas/mappings/JET/magnetics/0/: JET_magnetics_v1.xml
source/exp2imas/mappings/JET/magnetics/68613/: JET_magnetics_v1.xml
source/exp2imas/mappings/JET/summary/0/: JET_summary_v1.xml
source/exp2imas/tests/: CMakeLists.txt  setup.inc.in  test_imas_jet_iron_core.cpp  test_imas_jet_magnetics.cpp  test_imas_jet_pf_active.cpp  test_imas_jet_tf.cpp  test_imas_jet_thomson_scattering.cpp  test_imas_tcv_magnetics.cpp
source/hl2a/: BaseTypes.h  CMakeLists.txt  DataManagerFactory.cpp  DataManagerFactory.h  HL2AConverter.cpp  HL2AConverter.h  HL2AResult.cpp  HL2AResult.h  HL2ATranslator.cpp  HL2ATranslator.h  IDataManager.h  ITranslator.h  MDSSaver.cpp  MDSSaver.h  TranslatorFactory.cpp  TranslatorFactory.h  hl2a.cfg.in  hl2a_dyn_data_utilities.c  hl2a_dyn_data_utilities.h  hl2a_flux_loop_data.cpp  hl2a_flux_loop_data.h  hl2a_magnetics.c  hl2a_magnetics.c~  hl2a_magnetics.h  hl2a_magnetics.h~  hl2a_mapped_data.c  hl2a_mapped_data.h  hl2a_plugin.c  hl2a_plugin.h  hl2a_soft_x_rays.c  hl2a_soft_x_rays.h
source/hl2a/HL2A_mappings/: IDAM_mapping.xml  UDA_mapping.xml
source/imas/: CMakeLists.txt  comments2help.py  help.md  imas.cfg.in  imas_plugin.cpp  imas_plugin.h  machine_mapping.h  machines.txt  mappings.txt  uri_parser.h
source/imas_forward/: CMakeLists.txt  help.md  imas_forward_plugin.cpp  imas_forward_plugin.h
source/imas_mapping/: CMakeLists.txt  help.md  imas_mapping_plugin.cpp  imas_mapping_plugin.h  machine_mapping.cpp  machine_mapping.h  machines.txt
source/imas_mapping/tests/: CMakeLists.txt  setup.inc.in  test_imas_mapping.cpp
source/imas_old/: CMakeLists.txt  common.c  common.h  extract_indices.h  imas.h  imas_common.c  imas_hdf5.c  imas_hdf5.h  imas_mds.c  imas_mds.h  machine_mapping.cpp  machine_mapping.h  machines.txt
source/imas_partial/: CMakeLists.txt  access_functions.cpp  access_functions.h  help.md  imas_partial_plugin.cpp  imas_partial_plugin.h  is_integer.cpp  is_integer.h  make_test_ids.py  test.cpp
source/imas_partial/tests/: CMakeLists.txt  setup.inc.in  test.cpp  test_helpers.h  test_plugin.cpp  tests.cpp
source/imas_remote/: CMakeLists.txt  imas_plugin.cpp  imas_remote_plugin.cpp  imas_remote_plugin.h
source/imas_uda/: CMakeLists.txt  imasUdaPlugin.cpp  imasUdaPlugin.h
source/imasdd/: CMakeLists.txt  imasdd.cfg.in  imasdd_plugin.cpp  imasdd_plugin.h
source/imasdd/tests/: CMakeLists.txt  tests.cpp
source/iter_md/: CMakeLists.txt  configuration_mapping.cpp  configuration_mapping.h  configurations.txt  iter_md_plugin.cpp  iter_md_plugin.h
source/jet_equilibrium/: CMakeLists.txt  jet_equilibrium_plugin.cpp  jet_equilibrium_plugin.h
source/jet_magnetics/: CMakeLists.txt  jet_magnetics_plugin.cpp  jet_magnetics_plugin.h  parse_magnetics.py  sensors.xml  sensors_200c_detail.txt  tinyxml2.h
source/jet_summary/: CMakeLists.txt  jet_summary_plugin.cpp  jet_summary_plugin.h
source/livedisplay/: CMakeLists.txt  livedisplay.c  livedisplay.h  structs.h
source/mast_imas/: CMakeLists.txt  mastImasPlugin.c  mastImasPlugin.h
source/source/: CMakeLists.txt  source.c  source.h
source/tcv/: CMakeLists.txt  tcv.cfg.in  tcv_mds.c  tcv_mds.h  tcv_plugin.c  tcv_plugin.h  tcv_xml.c  tcv_xml.h
source/tcv/TCV_mappings/: magnetics_v0.xml
source/tcvm/: CMakeLists.txt  tcvm.cfg.in  tcvm_matlab_engine.c  tcvm_matlab_engine.h  tcvm_plugin.c  tcvm_plugin.h  udaPlugins.conf
source/tcvm/matlab/: myFunction.m  myFunction2.m
source/tcvm/tests/: CMakeLists.txt  setup.inc.in  test_imas_tcvm.cpp
source/tore_supra/: CMakeLists.txt  tore_supra.cfg.in  tore_supra_plugin.c  tore_supra_plugin.h  ts_mds.c  ts_xml.c  ts_xml.h
source/tore_supra/TS_mappings/: UDA_mapping.xml  antennas_v1.xml  charge_exchange_v1.xml  ece_v1.xml  iron_core_v1.xml  magnetics_v1.xml  pf_active_v1.xml  tf_v1.xml  thomson_scattering_v1.xml  wall_v1.xml
source/west/: CMakeLists.txt  ts_rqparm.c  west.cfg.in  west_barometry.c  west_barometry.h  west_dyn_data_utilities.c  west_dyn_data_utilities.h  west_dynamic_data.c  west_dynamic_data.h  west_ece.c  west_ece.h  west_ece_mode.h  west_ic_antennas.c  west_ic_antennas.h  west_lh_antennas.c  west_lh_antennas.h  west_pf_active.c  west_pf_active.h  west_pf_passive.c  west_pf_passive.h  west_plugin.c  west_plugin.h  west_polaro_interf.c  west_polaro_interf.h  west_soft_x_rays.c  west_soft_x_rays.h  west_static_data_utilities.c  west_static_data_utilities.h  west_summary.h  west_utilities.h  west_xml.c  west_xml.h
source/west/WEST_mappings/: IDAM_mapping.xml  soft_x_rays_calib_ce_cx_e.txt
source/west_tunnel/: CMakeLists.txt  west_tunnel.c  west_tunnel.h  west_tunnel_ssh_server.c
(+34 files in other folders)
